// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormattingBox renders a snapshot correctly when given json 1`] = `
.emotion-1 {
  white-space: pre-wrap;
}

.emotion-0 {
  margin-left: 5px;
}

.emotion-2 .nav-tabs {
  margin-bottom: 15px;
}

.emotion-2 .tab-content pre {
  margin-bottom: 0;
  overflow: auto;
  max-height: calc(92vh - 326px);
}

.emotion-2 .formatterError a {
  color: #a94442;
  background: #f2dede;
}

.emotion-2 .formatterError.active>a,
.emotion-2 .formatterError.active>a:focus,
.emotion-2 .formatterError.active>a:hover {
  color: #a94442;
}

.emotion-2 .formatterWarning a {
  color: #8a6d3b;
  background: #fcf8e3;
}

.emotion-2 .formatterWarning.active>a,
.emotion-2 .formatterWarning.active>a:focus,
.emotion-2 .formatterWarning.active>a:hover {
  color: #8a6d3b;
}

<div>
  <div
    className="emotion-2"
    id="message-formatting-tabs"
    style={undefined}
  >
    <ul
      className="nav nav-tabs"
      role="tablist"
    >
      <li
        className=""
        role="presentation"
        style={undefined}
      >
        <a
          aria-controls="message-formatting-tabs-pane-0"
          aria-selected={false}
          href="#"
          id="message-formatting-tabs-tab-0"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={-1}
        >
          Original
        </a>
      </li>
      <li
        className="formatterError"
        role="presentation"
        style={undefined}
      >
        <a
          aria-controls="message-formatting-tabs-pane-1"
          aria-selected={false}
          href="#"
          id="message-formatting-tabs-tab-1"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={-1}
        >
          XML
          <span
            className="emotion-0 glyphicon glyphicon-exclamation-sign"
          />
        </a>
      </li>
      <li
        className="active"
        role="presentation"
        style={undefined}
      >
        <a
          aria-controls="message-formatting-tabs-pane-2"
          aria-selected={true}
          href="#"
          id="message-formatting-tabs-tab-2"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={undefined}
        >
          JSON
        </a>
      </li>
    </ul>
    <div
      className="tab-content"
    >
      <div
        aria-hidden={true}
        aria-labelledby="message-formatting-tabs-tab-0"
        className="tab-pane"
        id="message-formatting-tabs-pane-0"
        role="tabpanel"
      >
        <pre
          className="emotion-1"
          id="Original"
        >
          {"a":"apple","b":42, "c":false}
        </pre>
      </div>
      <div
        aria-hidden={true}
        aria-labelledby="message-formatting-tabs-tab-1"
        className="tab-pane"
        id="message-formatting-tabs-pane-1"
        role="tabpanel"
      >
        <div
          className="alert alert-danger"
          id="XMLwarning"
          role="alert"
        >
          <p>
            The formatter didn't return any text to display.
          </p>
        </div>
      </div>
      <div
        aria-hidden={false}
        aria-labelledby="message-formatting-tabs-tab-2"
        className="tab-pane active"
        id="message-formatting-tabs-pane-2"
        role="tabpanel"
      >
        <pre
          className=""
          id="JSON"
        >
          {
              "a": "apple",
              "b": 42,
              "c": false
          }
        </pre>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormattingBox renders a snapshot correctly when given plain text 1`] = `
.emotion-2 {
  white-space: pre-wrap;
}

.emotion-0 {
  margin-left: 5px;
}

.emotion-3 .nav-tabs {
  margin-bottom: 15px;
}

.emotion-3 .tab-content pre {
  margin-bottom: 0;
  overflow: auto;
  max-height: calc(92vh - 326px);
}

.emotion-3 .formatterError a {
  color: #a94442;
  background: #f2dede;
}

.emotion-3 .formatterError.active>a,
.emotion-3 .formatterError.active>a:focus,
.emotion-3 .formatterError.active>a:hover {
  color: #a94442;
}

.emotion-3 .formatterWarning a {
  color: #8a6d3b;
  background: #fcf8e3;
}

.emotion-3 .formatterWarning.active>a,
.emotion-3 .formatterWarning.active>a:focus,
.emotion-3 .formatterWarning.active>a:hover {
  color: #8a6d3b;
}

<div>
  <div
    className="emotion-3"
    id="message-formatting-tabs"
    style={undefined}
  >
    <ul
      className="nav nav-tabs"
      role="tablist"
    >
      <li
        className="active"
        role="presentation"
        style={undefined}
      >
        <a
          aria-controls="message-formatting-tabs-pane-0"
          aria-selected={true}
          href="#"
          id="message-formatting-tabs-tab-0"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={undefined}
        >
          Original
        </a>
      </li>
      <li
        className="formatterError"
        role="presentation"
        style={undefined}
      >
        <a
          aria-controls="message-formatting-tabs-pane-1"
          aria-selected={false}
          href="#"
          id="message-formatting-tabs-tab-1"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={-1}
        >
          XML
          <span
            className="emotion-0 glyphicon glyphicon-exclamation-sign"
          />
        </a>
      </li>
      <li
        className="formatterError"
        role="presentation"
        style={undefined}
      >
        <a
          aria-controls="message-formatting-tabs-pane-2"
          aria-selected={false}
          href="#"
          id="message-formatting-tabs-tab-2"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={-1}
        >
          JSON
          <span
            className="emotion-0 glyphicon glyphicon-exclamation-sign"
          />
        </a>
      </li>
    </ul>
    <div
      className="tab-content"
    >
      <div
        aria-hidden={false}
        aria-labelledby="message-formatting-tabs-tab-0"
        className="tab-pane active"
        id="message-formatting-tabs-pane-0"
        role="tabpanel"
      >
        <pre
          className="emotion-2"
          id="Original"
        >
          "a":"apple","b":42, "c":false
        </pre>
      </div>
      <div
        aria-hidden={true}
        aria-labelledby="message-formatting-tabs-tab-1"
        className="tab-pane"
        id="message-formatting-tabs-pane-1"
        role="tabpanel"
      >
        <div
          className="alert alert-danger"
          id="XMLwarning"
          role="alert"
        >
          <p>
            The formatter didn't return any text to display.
          </p>
        </div>
      </div>
      <div
        aria-hidden={true}
        aria-labelledby="message-formatting-tabs-tab-2"
        className="tab-pane"
        id="message-formatting-tabs-pane-2"
        role="tabpanel"
      >
        <div
          className="alert alert-danger"
          id="JSONerror"
          role="alert"
        >
          <p>
            The formatter threw an error whilst trying to format the text of this data:
          </p>
          <p>
            SyntaxError: Unexpected token : in JSON at position 3
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormattingBox renders a snapshot correctly when given props 1`] = `
.emotion-2 {
  white-space: pre-wrap;
}

.emotion-0 {
  margin-left: 5px;
}

.emotion-3 .nav-tabs {
  margin-bottom: 15px;
}

.emotion-3 .tab-content pre {
  margin-bottom: 0;
  overflow: auto;
  max-height: calc(92vh - 326px);
}

.emotion-3 .formatterError a {
  color: #a94442;
  background: #f2dede;
}

.emotion-3 .formatterError.active>a,
.emotion-3 .formatterError.active>a:focus,
.emotion-3 .formatterError.active>a:hover {
  color: #a94442;
}

.emotion-3 .formatterWarning a {
  color: #8a6d3b;
  background: #fcf8e3;
}

.emotion-3 .formatterWarning.active>a,
.emotion-3 .formatterWarning.active>a:focus,
.emotion-3 .formatterWarning.active>a:hover {
  color: #8a6d3b;
}

<div>
  <div
    className="emotion-3"
    id="message-formatting-tabs"
    style={undefined}
  >
    <ul
      className="nav nav-tabs"
      role="tablist"
    >
      <li
        className="active"
        role="presentation"
        style={undefined}
      >
        <a
          aria-controls="message-formatting-tabs-pane-0"
          aria-selected={true}
          href="#"
          id="message-formatting-tabs-tab-0"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={undefined}
        >
          Original
        </a>
      </li>
      <li
        className="formatterError"
        role="presentation"
        style={undefined}
      >
        <a
          aria-controls="message-formatting-tabs-pane-1"
          aria-selected={false}
          href="#"
          id="message-formatting-tabs-tab-1"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={-1}
        >
          XML
          <span
            className="emotion-0 glyphicon glyphicon-exclamation-sign"
          />
        </a>
      </li>
      <li
        className="formatterError"
        role="presentation"
        style={undefined}
      >
        <a
          aria-controls="message-formatting-tabs-pane-2"
          aria-selected={false}
          href="#"
          id="message-formatting-tabs-tab-2"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={-1}
        >
          JSON
          <span
            className="emotion-0 glyphicon glyphicon-exclamation-sign"
          />
        </a>
      </li>
    </ul>
    <div
      className="tab-content"
    >
      <div
        aria-hidden={false}
        aria-labelledby="message-formatting-tabs-tab-0"
        className="tab-pane active"
        id="message-formatting-tabs-pane-0"
        role="tabpanel"
      >
        <pre
          className="emotion-2"
          id="Original"
        >
          test
        </pre>
      </div>
      <div
        aria-hidden={true}
        aria-labelledby="message-formatting-tabs-tab-1"
        className="tab-pane"
        id="message-formatting-tabs-pane-1"
        role="tabpanel"
      >
        <div
          className="alert alert-danger"
          id="XMLwarning"
          role="alert"
        >
          <p>
            The formatter didn't return any text to display.
          </p>
        </div>
      </div>
      <div
        aria-hidden={true}
        aria-labelledby="message-formatting-tabs-tab-2"
        className="tab-pane"
        id="message-formatting-tabs-pane-2"
        role="tabpanel"
      >
        <div
          className="alert alert-danger"
          id="JSONerror"
          role="alert"
        >
          <p>
            The formatter threw an error whilst trying to format the text of this data:
          </p>
          <p>
            SyntaxError: Unexpected token e in JSON at position 1
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormattingBox renders a snapshot correctly when given xml 1`] = `
.emotion-1 {
  white-space: pre-wrap;
}

.emotion-0 {
  margin-left: 5px;
}

.emotion-2 .nav-tabs {
  margin-bottom: 15px;
}

.emotion-2 .tab-content pre {
  margin-bottom: 0;
  overflow: auto;
  max-height: calc(92vh - 326px);
}

.emotion-2 .formatterError a {
  color: #a94442;
  background: #f2dede;
}

.emotion-2 .formatterError.active>a,
.emotion-2 .formatterError.active>a:focus,
.emotion-2 .formatterError.active>a:hover {
  color: #a94442;
}

.emotion-2 .formatterWarning a {
  color: #8a6d3b;
  background: #fcf8e3;
}

.emotion-2 .formatterWarning.active>a,
.emotion-2 .formatterWarning.active>a:focus,
.emotion-2 .formatterWarning.active>a:hover {
  color: #8a6d3b;
}

<div>
  <div
    className="emotion-2"
    id="message-formatting-tabs"
    style={undefined}
  >
    <ul
      className="nav nav-tabs"
      role="tablist"
    >
      <li
        className=""
        role="presentation"
        style={undefined}
      >
        <a
          aria-controls="message-formatting-tabs-pane-0"
          aria-selected={false}
          href="#"
          id="message-formatting-tabs-tab-0"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={-1}
        >
          Original
        </a>
      </li>
      <li
        className="active"
        role="presentation"
        style={undefined}
      >
        <a
          aria-controls="message-formatting-tabs-pane-1"
          aria-selected={true}
          href="#"
          id="message-formatting-tabs-tab-1"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={undefined}
        >
          XML
        </a>
      </li>
      <li
        className="formatterError"
        role="presentation"
        style={undefined}
      >
        <a
          aria-controls="message-formatting-tabs-pane-2"
          aria-selected={false}
          href="#"
          id="message-formatting-tabs-tab-2"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={-1}
        >
          JSON
          <span
            className="emotion-0 glyphicon glyphicon-exclamation-sign"
          />
        </a>
      </li>
    </ul>
    <div
      className="tab-content"
    >
      <div
        aria-hidden={true}
        aria-labelledby="message-formatting-tabs-tab-0"
        className="tab-pane"
        id="message-formatting-tabs-pane-0"
        role="tabpanel"
      >
        <pre
          className="emotion-1"
          id="Original"
        >
          &lt;a&gt;This is a sample xml message&lt;/a&gt;
        </pre>
      </div>
      <div
        aria-hidden={false}
        aria-labelledby="message-formatting-tabs-tab-1"
        className="tab-pane active"
        id="message-formatting-tabs-pane-1"
        role="tabpanel"
      >
        <pre
          className=""
          id="XML"
        >
          &lt;a&gt;
              This is a sample xml message
          &lt;/a&gt;
        </pre>
      </div>
      <div
        aria-hidden={true}
        aria-labelledby="message-formatting-tabs-tab-2"
        className="tab-pane"
        id="message-formatting-tabs-pane-2"
        role="tabpanel"
      >
        <div
          className="alert alert-danger"
          id="JSONerror"
          role="alert"
        >
          <p>
            The formatter threw an error whilst trying to format the text of this data:
          </p>
          <p>
            SyntaxError: Unexpected token &lt; in JSON at position 0
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormattingBox should fail to format mal-formatted JSON 1`] = `
<Alert
  bsClass="alert"
  bsStyle="danger"
  closeLabel="Close alert"
  id="JSONerror"
  key="JSONerror"
>
  <p
    key="0"
  >
    The formatter threw an error whilst trying to format the text of this data:
  </p>
  <p
    key="1"
  >
    SyntaxError: Unexpected token , in JSON at position 7
  </p>
</Alert>
`;

exports[`FormattingBox should fail to format mal-formatted xml 1`] = `
<Alert
  bsClass="alert"
  bsStyle="danger"
  closeLabel="Close alert"
  id="XMLerror"
  key="XMLerror"
>
  <p
    key="0"
  >
    The formatter threw an error whilst trying to format the text of this data:
  </p>
  <p
    key="1"
  >
    Error: Found multiple root nodes
  </p>
</Alert>
`;
